--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
                 <img class="header-pic" src="Flower Asset/pngwing 10.png" alt="Picture of tulip flower">
             </div>
         </div>
+    <!-- main section starts -->
 </body>
 </html>
