--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
                 <img class="header-pic" src="Flower Asset/pngwing 10.png" alt="Picture of tulip flower">
             </div>
         </div>
+    </header>
     <!-- main section starts -->
+    <main>
+        <!-- featured flower section -->
+        <div class="featured-flower">
+            <div class="featured-content">
+                <h1>Our Featured Flowers</h1>
+                <p class="featured-text">It is a long established fact that a reader will be distracted by <br>the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="flower-image">
+                <div class="flower-image1">
+                    <img src="Flower Asset/pngwing 6.png" alt="photo of flower 1">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+                <div class="flower-image3">
+                    <img src="Flower Asset/pngwing 5.png" alt="photo of flower 1">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+            
+                <div class="flower-image2">
+                    <img src="Flower Asset/pngwing 7.png" alt="photo of flower 1">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
