hot deal section created

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
                 </div>
             </div>
         </div>
+        <!-- Hot deal section starts -->
+        <div class="hot-deal-section">
+            <div class="hot-deal-content">
+                <h2>Hot Deal ! Sale Up To 25% Off</h2>
+                <p class="featured-text">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                <button class="button-style">Sign Up</button>
+            </div>
+            <div class="hot-deal-image">
+                <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </div>
     </main>
 </body>
 </html>
