insta section added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body> 
-    <!-- header section starts -->
+    <!-- header section starts-->
     <header class="header-section">
         <div class="header">
             <div class="header-title">
@@ -34,20 +34,20 @@
             <div class="flower-image">
                 <div class="flower-image1">
                     <img src="Flower Asset/pngwing 6.png" alt="photo of flower 1">
-                    <h4>Pink Flower Tree</h4>
+                    <h4><u>Pink Flower Tree</u></h4>
                 </div>
                 <div class="flower-image3">
                     <img src="Flower Asset/pngwing 5.png" alt="photo of flower 1">
-                    <h4>Pink Flower Tree</h4>
+                    <h4><u>Pink Flower Tree</u></h4>
                 </div>
             
                 <div class="flower-image2">
                     <img src="Flower Asset/pngwing 7.png" alt="photo of flower 1">
-                    <h4>Pink Flower Tree</h4>
+                    <h4><u>Pink Flower Tree</u></h4>
                 </div>
             </div>
         </div>
-        <!-- Hot deal section starts -->
+        <!-- Hot deal section  -->
         <div class="hot-deal-section">
             <div class="hot-deal-content">
                 <h2>Hot Deal ! Sale Up To 25% Off</h2>
@@ -56,6 +56,27 @@
             </div>
             <div class="hot-deal-image">
                 <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </div>
+        <!-- Instagram section -->
+        <div class="instagram-section">
+            <div class="instagram-content">
+                <h1>Instagram</h1>
+                <p class="featured-text">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="instagram-image">
+                <div class="img">
+                    <img src="Flower Asset/Flower 01.png" alt="">
+                </div>
+                <div class="img">
+                    <img src="Flower Asset/Rectangle 4.png" alt="">
+                </div>
+                <div class="img">
+                    <img src="Flower Asset/Rectangle 5.png" alt="">
+                </div>
+                <div class="img">
+                        <img src="Flower Asset/Rectangle 6.png" alt="">
+                </div>
             </div>
         </div>
     </main>
