Deals section added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                 </div>
             </div>
         </div>
+        <!-- Get The Latest Deals section -->
+            <div class="deals-section">
+                <div class="deals-header"><h1 class="get-heading">Get The Latest Deals</h1>
+                    <p class="featured-text">$30 coupon for first shopping</p>
+                    <input class="input-email" placeholder="  Enter your email here..." type="text">
+                    <button class="button-style">Subscribe</button>
+                </div>
+            </div>
     </main>
+    
 </body>
 </html>
