--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
                 </div>
             </div>
     </main>
-    
+        <!-- Get The footer section -->
+    <footer> 
+        <h1><span class="footer-head-color">Flower</span>Shop</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+        </p> <br>
+        <br>
+        <p>@2020-2023, FlowerShop.com. All rights reserved.</p> 
+
+    </footer>
 </body>
 </html>
