--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body> 
+
+<body>
     <!-- header section starts-->
     <header class="header-section">
         <div class="header">
             <div class="header-title">
                 <h1 class="header-title">Let's make <br> beautiful flowers<br> a part of your life.</h1> <br>
-                <p class="header-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p class="header-description">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has
+                    a more-or-less normal distribution of letters.</p>
                 <button class="button-style">Shop Now</button>
-            </div> 
+            </div>
             <div class="header-image">
                 <img class="header-pic" src="Flower Asset/pngwing 10.png" alt="Picture of tulip flower">
             </div>
@@ -29,20 +33,27 @@
         <div class="featured-flower">
             <div class="featured-content">
                 <h1>Our Featured Flowers</h1>
-                <p class="featured-text">It is a long established fact that a reader will be distracted by <br>the readable content of a page when looking at its layout.</p>
+                <p class="featured-text">It is a long established fact that a reader will be distracted by <br>the
+                    readable content of a page when looking at its layout.</p>
             </div>
             <div class="flower-image">
                 <div class="flower-image1">
-                    <img src="Flower Asset/pngwing 6.png" alt="photo of flower 1">
+                    <div class="image1">
+                        <img class="img1" src="Flower Asset/pngwing 6.png" alt="photo of flower 1">
+                    </div>
                     <h4><u>Pink Flower Tree</u></h4>
                 </div>
                 <div class="flower-image3">
-                    <img src="Flower Asset/pngwing 5.png" alt="photo of flower 1">
+                    <div class="image2">
+                        <img class="img1" src="Flower Asset/pngwing 5.png" alt="photo of flower 1">
+                    </div>
                     <h4><u>Pink Flower Tree</u></h4>
                 </div>
-            
-                <div class="flower-image2">
-                    <img src="Flower Asset/pngwing 7.png" alt="photo of flower 1">
+
+                <div class="flower-image3">
+                    <div class="image3">
+                        <img class="img2" src="Flower Asset/pngwing 7.png" alt="photo of flower 1">
+                    </div>
                     <h4><u>Pink Flower Tree</u></h4>
                 </div>
             </div>
@@ -51,7 +62,8 @@
         <div class="hot-deal-section">
             <div class="hot-deal-content">
                 <h2>Hot Deal ! Sale Up To 25% Off</h2>
-                <p class="featured-text">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                <p class="featured-text">It is a long established fact that a reader will be distracted by the
+                    readable<br> content of a page when looking at its layout.</p>
                 <button class="button-style">Sign Up</button>
             </div>
             <div class="hot-deal-image">
@@ -62,40 +74,44 @@
         <div class="instagram-section">
             <div class="instagram-content">
                 <h1>Instagram</h1>
-                <p class="featured-text">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p class="featured-text">It is a long established fact that a reader will be distracted by the readable
+                    <br> content of a page when looking at its layout.</p>
             </div>
             <div class="instagram-image">
                 <div class="img">
-                    <img src="Flower Asset/Flower 01.png" alt="">
+                    <img class="pic" src="Flower Asset/Flower 01.png" alt="">
                 </div>
                 <div class="img">
-                    <img src="Flower Asset/Rectangle 4.png" alt="">
+                    <img class="pic" src="Flower Asset/Rectangle 4.png" alt="">
                 </div>
                 <div class="img">
-                    <img src="Flower Asset/Rectangle 5.png" alt="">
+                    <img class="pic" src="Flower Asset/Rectangle 5.png" alt="">
                 </div>
                 <div class="img">
-                        <img src="Flower Asset/Rectangle 6.png" alt="">
+                    <img class="pic" src="Flower Asset/Rectangle 6.png" alt="">
                 </div>
             </div>
         </div>
         <!-- Get The Latest Deals section -->
-            <div class="deals-section">
-                <div class="deals-header"><h1 class="get-heading">Get The Latest Deals</h1>
-                    <p class="featured-text">$30 coupon for first shopping</p>
-                    <input class="input-email" placeholder="  Enter your email here..." type="text">
-                    <button class="button-style">Subscribe</button>
-                </div>
+        <div class="deals-section">
+            <div class="deals-header">
+                <h1 class="get-heading">Get The Latest Deals</h1>
+                <p class="featured-text">$30 coupon for first shopping</p>
+                <input class="input-email" placeholder="  Enter your email here..." type="text">
+                <button class="button-style">Subscribe</button>
             </div>
+        </div>
     </main>
-        <!-- Get The footer section -->
-    <footer> 
+    <!-- Get The footer section -->
+    <footer>
         <h1><span class="footer-head-color">Flower</span>Shop</h1>
-        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
+            looking at its layout.
         </p> <br>
         <br>
-        <p>@2020-2023, FlowerShop.com. All rights reserved.</p> 
+        <p>@2020-2023, FlowerShop.com. All rights reserved.</p>
 
     </footer>
 </body>
+
 </html>
